--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,14 +1,18 @@
 {
+  "homepage": "/app",
   "dependencies": {
     "@chihuo/table": "^1.0.3",
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
     "@mui/icons-material": "^5.10.6",
     "@mui/material": "^5.10.8",
+    "@reduxjs/toolkit": "^1.8.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.4",
     "react-router-dom": "^6.4.1",
-    "react-scripts": "^5.0.1"
+    "react-scripts": "^5.0.1",
+    "socket.io-client": "^2"
   },
   "scripts": {
     "start": "react-scripts start"
