--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,8 +1,9 @@
 {
   "homepage": "/app",
   "dependencies": {
-    "@chihuo/selection": "^1.0.9",
-    "@chihuo/table": "^1.0.6",
+    "@chihuo/edittext": "^1.0.5",
+    "@chihuo/selection": "^1.0.10",
+    "@chihuo/table": "^1.0.11",
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
     "@mui/icons-material": "^5.10.6",
