--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,4 +1,5 @@
 {
+  "license": "MIT",
   "homepage": "/app",
   "dependencies": {
     "@chihuo/edittext": "^1.0.6",
@@ -18,7 +19,8 @@
     "socket.io-client": "^2"
   },
   "scripts": {
-    "start": "react-scripts start"
+    "start": "react-scripts start",
+    "build": "BUILD_PATH='../bin/frontend' react-scripts build"
   },
   "browserslist": {
     "production": [
