--- a/package.json
+++ b/package.json
@@ -2,5 +2,9 @@
   "dependencies": {
     "@tabler/icons": "^1.101.0",
     "axios": "^1.1.2"
+  },
+  "devDependencies": {
+    "@electron-forge/cli": "^6.0.0",
+    "electron": "^21.2.2"
   }
 }
