--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
     "@mui/icons-material": "^5.10.6",
+    "@mui/joy": "^5.0.0-alpha.52",
     "@mui/material": "^5.10.8",
     "@reduxjs/toolkit": "^1.8.6",
     "react": "^18.2.0",
