--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "dependencies": {
+    "@chihuo/edittext": "^1.0.6",
+    "@chihuo/selection": "^1.0.10",
+    "@chihuo/table": "^1.0.12",
     "@tabler/icons": "^1.101.0",
     "axios": "^1.1.2"
   },
